--- a/Words/Client/wwwroot/css/app.css
+++ b/Words/Client/wwwroot/css/app.css
@@ -1,7 +1,18 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
+
+    background: linear-gradient(45deg, #17202A, #1C2731, #213841, #264556, #2B596D);
+    font-family: 'Titillium Web', sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    height: 100vh;
+    /*display: flex;
+    align-items: center;
+    justify-content: center;*/
+    color: #fff; 
 }
 
 h1:focus {
