--- a/Words/Client/Shared/NavMenu.razor
+++ b/Words/Client/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Home Page
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="loginpage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Login Page
+            </NavLink>
+        </div>
     </nav>
 </div>
 
