--- a/Words/Client/Shared/NavMenu.razor
+++ b/Words/Client/Shared/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Login Page
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="registerpage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Register Page
+            </NavLink>
+        </div>
     </nav>
 </div>
 
