--- a/Words/Client/Pages/LoginPage.razor.css
+++ b/Words/Client/Pages/LoginPage.razor.css
@@ -35,7 +35,7 @@ hr {
 
 /* login form start */
 
-.login-background {
+.form-background {
     border-radius: 20px;
     background-color: #B6BBC4;
     padding: 20px;
@@ -50,7 +50,7 @@ h2 {
 
 /* Form */
 
-.form-background {
+form {
     margin-top: 20px;
 }
 
