--- a/Words/Client/Shared/NavMenu.razor
+++ b/Words/Client/Shared/NavMenu.razor
@@ -39,6 +39,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Register Page
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="wordspage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Words Page
+            </NavLink>
+        </div>
     </nav>
 </div>
 
