--- a/Words/Client/Shared/NavMenu.razor
+++ b/Words/Client/Shared/NavMenu.razor
@@ -44,6 +44,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Words Page
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="editwordpage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Edit Word Page
+            </NavLink>
+        </div>
     </nav>
 </div>
 
