--- a/Words/Client/wwwroot/css/app.css
+++ b/Words/Client/wwwroot/css/app.css
@@ -110,3 +110,11 @@ a, .btn-link {
     .loading-progress-text:after {
         content: var(--blazor-load-percentage-text, "Loading");
     }
+
+.mudTF-background {
+    background-color: white;
+}
+
+.mud-card-contenttt {
+    padding: 0;
+}
