--- a/Words/Client/Pages/RegisterPage.razor.css
+++ b/Words/Client/Pages/RegisterPage.razor.css
@@ -56,8 +56,11 @@ form {
 
 label {
     font-size: 1.1rem;
+    margin-top: 15px;
+    margin-bottom: 5px;
 }
 
 .form-control {
     color: #191D88;
+    
 }
