--- a/Words/Client/Pages/LoginPage.razor.css
+++ b/Words/Client/Pages/LoginPage.razor.css
@@ -54,6 +54,12 @@ form {
     margin-top: 20px;
 }
 
+p {
+    color: red;
+    font-size: 1.2rem;
+    margin-bottom: 0;
+}
+
 label {
     font-size: 1.1rem;
     margin-top: 15px;
