Authenticate user token and show some pages only when authenticated

--- a/Words/Client/Pages/HomePage.razor
+++ b/Words/Client/Pages/HomePage.razor
@@ -1,6 +1,8 @@
 ﻿@layout PublicLayout
-@page "/homepage"
+@* @page "/homepage" *@
+@page "/"
 @inject NavigationManager NavigationManager
+@inject ILocalStorageService LocalStorage
 
 <div class="main">
     <div class="homepage-background">
@@ -22,5 +24,10 @@
     void ToRegisterPage()
     {
         NavigationManager.NavigateTo("registerpage");
+    }
+
+    protected override async void OnInitialized()
+    {
+        await LocalStorage.RemoveItemAsync("token");
     }
 }
