--- a/Words/Client/_Imports.razor
+++ b/Words/Client/_Imports.razor
@@ -9,4 +9,6 @@
 @using Words.Client
 @using Words.Client.Shared
 @using Words.Shared
-
+@using Microsoft.AspNetCore.Components.Authorization
+@using Blazored.LocalStorage;
+@using Microsoft.AspNetCore.Authorization
