--- a/Words/Client/App.razor
+++ b/Words/Client/App.razor
@@ -3,7 +3,7 @@
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
             <NotAuthorized>
-                Sorry but you are not allowed to see this
+                Sorry but you are not allowed to see this. Please register or login
             </NotAuthorized>
         </AuthorizeRouteView>
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
